docs: unify contribution guidelines
Remove contribution/README.md in favor of CONTRIBUTING.md

Closes https://kiwicom.atlassian.net/browse/FEPLT-1667

--- a/docs/src/documentation/01-getting-started/02-for-developers.mdx
+++ b/docs/src/documentation/01-getting-started/02-for-developers.mdx
@@ -91,7 +91,7 @@ We appreciate any contributions you might make.
 and [feature requests](https://github.com/kiwicom/orbit/issues/new?template=feature_request.md) are welcome,
 but please use the correct template.
 
-Please check out our [contribution guide](https://github.com/kiwicom/orbit/tree/master/.github/contribution/README.md).
+Please check out our [contribution guide](https://github.com/kiwicom/orbit/tree/master/.github/CONTRIBUTING.md).
 It includes contribution guidelines and information on how to run and develop the project.
 
 ### Feedback
@@ -106,4 +106,4 @@ Kiwi.com users can also slack us at **\#plz-orbit**.
 
 - [Design tokens](/foundation/design-tokens/)
 - [Icons](/foundation/icons/)
-- [Components contribution guide](https://github.com/kiwicom/orbit-components/blob/master/.github/contributing.md)
+- [Components contribution guide](https://github.com/kiwicom/orbit-components/blob/master/.github/CONTRIBUTING.md)
