docs: remove dev dep
docs: get back DM Sans as main font

docs: fix migration guides order

docs: improve tailwind-preset documentation

docs: add v10 migration guide

--- a/docs/src/documentation/05-development/04-migration-guides/01-v7.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v7.mdx
@@ -1,5 +1,5 @@
 ---
-title: V7
+title: v7
 description: How to migrate to Orbit 7.0.0
 redirect_from:
   - /migration-guides/v7/
@@ -8,7 +8,7 @@ redirect_from:
 # Orbit Migration Guide v7
 
 This migration guide focuses on the process of migrating from Orbit v6.4 to v7.0, as some breaking changes were introduced.
-With this guide we aim to walkthrough all the breaking changes and how they can be addressed, allowing the migration to be smoother and effortless.
+With this guide, we aim to walk through all the breaking changes and how they can be addressed, allowing the migration to be smoother and effortlessly.
 
 ## Breaking changes
 
