--- a/docs/src/documentation/05-development/04-migration-guides/02-v9.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/02-v9.mdx
@@ -1,5 +1,5 @@
 ---
-title: V9
+title: v9
 description: How to migrate to Orbit 9.0.0
 redirect_from:
   - /migration-guides/v9/
@@ -8,7 +8,7 @@ redirect_from:
 # Orbit Migration Guide v9
 
 This migration guide focuses on the process of migrating from Orbit v8.1.2 to v9.0, as some breaking changes were introduced.
-With this guide we aim to walkthrough all the breaking changes and how they can be addressed, allowing the migration to be smoother and effortless.
+With this guide, we aim to walk through all the breaking changes and how they can be addressed, allowing the migration to be smoother and effortlessly.
 
 This version of Orbit is **still** compatible with React 17 and doesn't make use of new features only available in React 18.
 
