fix(docs): fix example for "Mobile" component deprecation

--- a/docs/src/documentation/05-development/04-migration-guides/03-v10.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/03-v10.mdx
@@ -175,9 +175,9 @@ The `Mobile` component is now deprecated and its usage should be replaced by usi
 **Before:**
 
 ```jsx
-<Desktop>
+<Mobile>
   <Text>Only visible on mobile</Text>
-</Desktop>
+</Mobile>
 ```
 
 **Now:**
