docs: add instructions to customize font family for TW
Co-authored-by: Victor Genaev <vgenaev@gmail.com>

--- a/docs/src/documentation/05-development/04-migration-guides/03-v10.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/03-v10.mdx
@@ -21,7 +21,7 @@ Components in Tailwind should have almost the same API as before, so few breakin
 As mentioned before, this version of Orbit includes the first batch of components styled with Tailwind. Therefore, Tailwind must be installed and configured in your project for you to be able to use these components.
 Please refer to the [official Tailwind documentation](https://tailwindcss.com/docs/installation) and the [Orbit's Tailwind setup documentation](/foundation/tailwind/installation) for more information on how to do that.
 
-As a summary, you should have Tailwind installed and configured in your project, as well as the Orbit preset for Tailwind included on the config file.
+In summary, your project should have Tailwind installed and configured, with the Orbit preset for Tailwind included in the configuration file. If necessary, be sure to extend the theme to customize the default font family and replace Roboto.
 
 ### StyledBox removed
 
