--- a/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
+++ b/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
@@ -17,7 +17,7 @@ You can, of course, use Circular Pro typography with Orbit in any project.
 Just be sure that you have
 [the right license](https://lineto.com/The+Fonts/Font+Categories/Text+Fonts/Circular/) for your project.
 If you can't or don't want to use Circular Pro in your project,
-heck our [open-source section for typography](/foundation/typography/open-source/)
+check our [open-source section for typography](/foundation/typography/open-source/)
 where we explain how to use Orbit with Roboto.
 
 ## Using Orbit with Circular Pro
