--- a/docs/src/documentation/01-getting-started/02-for-developers.mdx
+++ b/docs/src/documentation/01-getting-started/02-for-developers.mdx
@@ -61,9 +61,9 @@ For a live preview, check out our [Storybook](https://kiwicom.github.io/orbit/) 
 
 You can also try `orbit-components` live on [CodeSandbox](https://codesandbox.io/s/github/designkiwicom/orbit-sandbox).
 
-## Types
+## Typescript
 
-Orbit comes with both Flow and Typescript definition files, so you can choose what fits your project.
+Orbit comes with Typescript definition files.
 If you're working with Typescript, you need to add a type for `styled-components`.
 
 ```shell
