feat(LayoutColumn): migrate to tailwind
BREAKING CHANGE: removed hideOn prop from LayoutColumn

--- a/docs/src/documentation/03-components/12-layout/layout/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/12-layout/layout/01-guidelines.mdx
@@ -28,7 +28,6 @@ To choose the best component for your use case, see our [developing layouts guid
 
 When choosing a layout with columns that change,
 make sure the same content appears no matter the width.
-If a column is hidden, move its content to a different one.
 
 Use progressive disclosure to keep content close by.
 Consider a [Hide component](/components/responsive/hide/) to vary what appears in each column.
@@ -53,12 +52,12 @@ On smaller screens, the second column is placed underneath the first.
 
 ### MMB layout
 
-The MMB layout is a one-column layout with the same visibility no matter the screen size.
+The MMB layout is a one-column layout.
 
 <ReactExample exampleId="Layout-mmb" />
 
 ### Search layout
 
-The Search layout is a three-column layout with one column always visible and the others variable.
+The Search layout is a three-column layout on larger screens. On smaller screens, the columns are placed below each other.
 
 <ReactExample exampleId="Layout-search" />
