chore(docs): fix eslint-plugin dependency

--- a/docs/src/documentation/05-development/01-guides/03-eslint-plugin.mdx
+++ b/docs/src/documentation/05-development/01-guides/03-eslint-plugin.mdx
@@ -5,6 +5,6 @@ redirect_from:
   - /guides/eslint-plugin/
 ---
 
-import ESLintPluginReadMe from "eslint-plugin-orbit-components/README.md";
+import ESLintPluginReadMe from "@kiwicom/eslint-plugin-orbit-components/README.md";
 
 <ESLintPluginReadMe />
