--- a/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
@@ -64,6 +64,16 @@ Where `<TYPE>` can be `Display`, `DisplaySubtitle`, `Title1`, `Title2`, `Title3`
 
 ## Deprecations
 
+To minimize the impact of this release, the new tokens were added and the old ones were deprecated.
+This means that the old tokens and respective tailwind classes still work in this version, but they are deprecated and will be removed in a future version.
+
+We recommend to start adopting the new tokens and classes as soon as possible.
+
+As some components have their props relying on these tokens, the props were also updated to reflect the changes in the design tokens.
+The old values of the props also still work in this version, but they are deprecated and will be removed in a future version.
+
+We recommend to start adopting the new values as soon as possible.
+
 ### Tokens and Tailwind classes
 
 #### Border Radius
@@ -88,11 +98,9 @@ And their respective tailwind classes:
 - `rounded-300`
 - `rounded-400`
 
-We recommend to start adopting the new tokens and classes as soon as possible.
+#### Elevation
 
-### Elevation
-
-Five elevation (box shadow) tokens were deprecated (to be released in the next major version) and five new ones were added.
+Five elevation (box shadow) tokens were deprecated (to be removed in the next major version) and five new ones were added.
 
 Here's the mapping for the new tokens:
 
@@ -110,11 +118,44 @@ And their respective tailwind classes:
 - `shadow-raised-reverse` -> `shadow-level3-reverse`
 - `shadow-overlay` -> `shadow-level4`
 
-We recommend to start adopting the new tokens and classes as soon as possible.
+#### Spacing
 
-## Box component
+The spacing tokens were also updated, allowing for more flexibility in the spacing values. The new tokens and their corresponding mapping are:
 
-Because the Box component props rely heavily on design tokens and their values, some of the prop values have been updated to reflect the changes in the design tokens.
+- `spaceXXXSmall` -> `space50` (2px)
+- `spaceXXSmall` -> `space100` (4px)
+- _(new token)_ -> `space150` (6px)
+- `spaceXSmall` -> `space200` (8px)
+- `spaceSmall` -> `space300` (12px)
+- `spaceMedium` -> `space400` (16px)
+- _(new token)_ -> `space500` (20px)
+- `spaceLarge` -> `space600` (24px)
+- `spaceXLarge` -> `space800` (32px)
+- `spaceXXLarge` -> `space1000` (40px)
+- _(new token)_ -> `space1200` (48px)
+- `spaceXXXLarge` -> **DEPRECATED** (52px)
+- _(new token)_ -> `space1600` (64px)
+
+This means that a vast number of tailwind classes were also updated to reflect these changes. Below, some examples of the updated classes, although we are not listing them all, as there are too many:
+
+- `p-xxxs` -> `p-50`
+- `m-xxs` -> `m-100`
+- `h-xs`-> `h-200`
+- `w-sm` -> `w-300`
+- `size-md` -> `size-400`
+- `top-lg` -> `top-600`
+- `space-x-xl` -> `space-x-800`
+- `space-y-xxl` -> `space-y-1000`
+- `left-xxxl` -> `left-[52px]` (custom hardcoded value)
+
+The `spaceXXXLarge` token is deprecated and will be removed in a future version, as well as all tailwind classes associated to it.
+If you are using it or any tailwind class associated to its value, please replace it with a custom hardcoded value, or check with your designer for the best alternative solution.
+
+### Box component
+
+#### borderRadius & elevation props
+
+The `borderRadius` and `elevation` props were updated to reflect the changes in the design tokens.
 
 **Before:**
 
@@ -134,12 +175,155 @@ Because the Box component props rely heavily on design tokens and their values, 
 <Box borderRadius="full" elevation="level4">…</Box>
 ```
 
+#### spacing props
+
+Both `padding` and `margin` props were updated to reflect the changes in the design tokens. The change also applies when using the object notation and inside media queries props.
+
+The code snippets below show some examples of the changes.
+
+**Before:**
+
+```jsx
+<Box padding="XXXSmall">"XXXSmall" padding</Box>
+<Box margin="XXSmall">"XXSmall" margin</Box>
+<Box padding={{ top: "XSmall", left: "small" }}>padding-top="XSmall"; padding-left="small"</Box>
+<Box margin={{ bottom: "medium", right: "large" }}>margin-bottom="medium"; margin-right="large"</Box>
+<Box tablet={{ padding: "XLarge", margin: "XXLarge" }}>padding="XLarge"; margin="XXLarge" (tablet and bigger)</Box>
+```
+
+**Now:**
+
+```jsx
+<Box padding="50">"50" padding</Box>
+<Box margin="100">"100" margin</Box>
+<Box padding={{ top: "200", left: "300" }}>padding-top="200"; padding-left="300"</Box>
+<Box margin={{ bottom: "400", right: "600" }}>margin-bottom="400"; margin-right="600"</Box>
+<Box tablet={{ padding: "800", margin: "1000" }}>padding="800"; margin="1000" (tablet and bigger)</Box>
+```
+
+### Stack component
+
+The `spacing` prop in `Stack` was updated to accept the new values associated with the new design tokens.
+Similarly to the `Box` component, the media queries props also accept the new values for spacing.
+
+**Before:**
+
+```jsx
+<Stack spacing="XXSmall">"XXSmall" spacing</Stack>
+<Stack tablet={{ spacing: "small" }}>"small" spacing (tablet and bigger)</Stack>
+// ...
+```
+
+**Now:**
+
+```jsx
+<Stack spacing="100">"100" spacing</Stack>
+<Stack tablet={{ spacing: "300" }}>"300" spacing (tablet and bigger)</Stack>
+// ...
+```
+
+### HorizontalScroll component
+
+The `spacing` prop in `HorizontalScroll` inherits its values from the `Stack` component.
+Therefore, it was also updated to accept new values associated with the new design tokens.
+
+**Before:**
+
+```jsx
+<HorizontalScroll spacing="XXSmall">"XXSmall" spacing</HorizontalScroll>
+// ...
+```
+
+**Now:**
+
+```jsx
+<HorizontalScroll spacing="100">"100" spacing</HorizontalScroll>
+// ...
+```
+
+### LinkList component
+
+The `spacing` prop in `LinkList` inherits its values from the `Stack` component.
+Therefore, it was also updated to accept new values associated with the new design tokens.
+
+**Before:**
+
+```jsx
+<LinkList spacing="XXSmall">"XXSmall" spacing</LinkList>
+// ...
+```
+
+**Now:**
+
+```jsx
+<LinkList spacing="100">"100" spacing</LinkList>
+// ...
+```
+
+### Tabs component
+
+The `spacing` prop in `Tabs` inherits its values from the `Stack` component.
+Therefore, it was also updated to accept new values associated with the new design tokens.
+
+**Before:**
+
+```jsx
+<Tabs spacing="XXSmall">"XXSmall" spacing</Tabs>
+// ...
+```
+
+**Now:**
+
+```jsx
+<Tabs spacing="100">"100" spacing</Tabs>
+// ...
+```
+
+### Inline component
+
+The `spacing` prop in `Inline` was also updated to accept the new values from the tokens.
+
+**Before:**
+
+```jsx
+<Inline spacing="XXSmall">"XXSmall" spacing</Inline>
+// ...
+```
+
+**Now:**
+
+```jsx
+<Inline spacing="100">"100" spacing</Inline>
+// ...
+```
+
+### Separator component
+
+The `sideOffset` prop in `Separator` was also updated to accept the new values from the tokens.
+
+**Before:**
+
+```jsx
+<Separator spacing="small">"small" spacing</Separator>
+// ...
+```
+
+**Now:**
+
+```jsx
+<Separator spacing="300">"300" spacing</Separator>
+// ...
+```
+
 ## Codemod
 
-A codemod was made available to help with the migration. It should target all the tokens and tailwind classes that were updated and correctly migrate them.
+A codemod is available to help with the migration. It should target the tokens and tailwind classes that were updated and correctly migrate them.
 
-Please ensure the changes are expected and there is no change missing. Please note that the codemod **does not** cover the Box component changes.
+Please ensure the changes are expected and there is no change missing. Please note that the codemod **does not** guarantee a full migration, nor its complete correcteness.
+Manual checks are still necessary, especially if prop values are being calculated conditionally.
+
+The codemod should be executed from your code directory. It will look for all files with the extensions `.js`, `.jsx`, `.ts`, and `.tsx` in the current directory and all its subfolders. To execute, run the following command:
 
 ```bash
-node .../transforms/tokens-v16.mjs
+curl -fsSL https://raw.githubusercontent.com/kiwicom/orbit/master/packages/orbit-components/transforms/tokens-v16.mjs | node --input-type=module
 ```
