docs: remove references to orbit codesandbox
The given example was broken so it was replaced it by the playground

--- a/docs/src/documentation/01-getting-started/02-for-developers.mdx
+++ b/docs/src/documentation/01-getting-started/02-for-developers.mdx
@@ -57,7 +57,7 @@ See [more info about the Orbit provider](/utilities/orbit-provider/).
 
 For a live preview, check out our [Storybook](https://kiwicom.github.io/orbit/) or [orbit.kiwi](https://orbit.kiwi).
 
-You can also try `orbit-components` live on [CodeSandbox](https://codesandbox.io/s/github/designkiwicom/orbit-sandbox).
+You can also try `orbit-components` directly on our [Playground](https://orbit.kiwi/playground/).
 
 ## Typescript
 
