docs: upgrade migration guide with new border radius 200 value

--- a/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
@@ -86,6 +86,7 @@ Here's the mapping for the new tokens:
 - `borderRadiusNormal` -> `borderRadius100` (value change from 3px to 4px)
 - `borderRadiusLarge` -> `borderRadius150`
 - `borderRadiusCircle` -> `borderRadiusFull`
+- `borderRadius200` (new value of 8px, **available from version 16.1.0**)
 - `borderRadius300` (new value of 12px)
 - `borderRadius400` (new value of 16px)
 
@@ -95,6 +96,7 @@ And their respective tailwind classes:
 - `rounded-normal` -> `rounded-100` (value change from 3px to 4px)
 - `rounded-large` -> `rounded-150`
 - `rounded-circle` -> `rounded-full`
+- `rounded-200` (new value of 8px, **available from version 16.1.0**)
 - `rounded-300`
 - `rounded-400`
 
