--- a/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v16.mdx
@@ -62,6 +62,28 @@ Some deprecated Heading tokens were removed. They have been deprecated since the
 
 Where `<TYPE>` can be `Display`, `DisplaySubtitle`, `Title1`, `Title2`, `Title3`, `Title4`, `Title5`, or `Title6`.
 
+#### Colors (Visual Breaking Change Only — from version 16.1.0)
+
+Some color tokens were updated to new values. While this does not affect the tokens usage nor the tailwind classes, it affects the visual appearance of the components.
+
+Those changes are expected and should be accepted. Nonetheless, we document them as visual breaking changes, so they are highlighted and clear for you.
+
+The updated colors are:
+
+- `productDarker` (from `#005C4E` to `#004D41`)
+- `blueNormal` (from `#0172CB` to `#0070C8`)
+- `blueDarker` (from `#004680` to `#003866`)
+- `greenNormal` (from `#28A138` to `#0A932B`)
+- `greenDarker` (from `#235C2B` to `#1C4A23`)
+- `orangeNormal` (from `#DF7B00` to `#CF6C00`)
+- `orangeNormalHover` (from `#C96F00` to `#B86000`)
+- `orangeNormalActive` (from `#B26200` to `#AD5700`)
+- `orangeDark` (from `#AD5700` to `#A75400`)
+- `orangeDarkHover` (from `#A75400` to `#954A00`)
+- `orangeDarkActive` (from `#954A00` to `#803F00`)
+- `orangeDarker` (from `#803F00` to `#663200`)
+- `redDarker` (from `#760909` to `#630808`)
+
 ## Deprecations
 
 To minimize the impact of this release, the new tokens were added and the old ones were deprecated.
