feat(icons): add X icon

--- a/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
@@ -14,4 +14,10 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ### ColoredTwitter icon removed
 
-The `ColoredTwitter` icon was removed. The `Twitter` icon should be used instead.
+The `ColoredTwitter` icon was removed. The `X` icon should be used instead.
+
+## Deprecations
+
+### `Twitter` icon
+
+The `Twitter` icon was deprecated and will be removed in a future version. The `X` icon should be used instead.
