feat(icons): remove Twitter icon
BREAKING CHANGE: Twitter icon was removed. X icon should be used instead.

--- a/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
@@ -12,9 +12,9 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
-### ColoredTwitter icon removed
+### ColoredTwitter and Twitter icons removed
 
-The `ColoredTwitter` icon was removed. The `X` icon should be used instead.
+The `ColoredTwitter` and `Twitter` icons were removed. The `X` icon should be used instead.
 
 ## Deprecations
 
