feat(SocialButton): replace twitter type by X
BREAKING CHANGE: SocialButton's type prop no longer accepts "twitter".
"X" type is now accepted.

--- a/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v17.mdx
@@ -16,8 +16,6 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 The `ColoredTwitter` and `Twitter` icons were removed. The `X` icon should be used instead.
 
-## Deprecations
+### SocialButton type
 
-### `Twitter` icon
-
-The `Twitter` icon was deprecated and will be removed in a future version. The `X` icon should be used instead.
+The `type` prop in `SocialButton` no longer accepts `"twitter"` as a value. It now accepts `"X"` (capital letter) and renders the new icon correctly.
