--- a/docs/src/documentation/01-getting-started/03-github.mdx
+++ b/docs/src/documentation/01-getting-started/03-github.mdx
@@ -38,10 +38,16 @@ The Orbit Design Tokens package stores all visual UI attributes.
 Orbit Storybook provides a preview of all React components,
 together with the possibility to play with different variations and settings.
 
+<FancyLink title="Orbit Storybook" href="https://kiwicom.github.io/orbit/" icon="storybook" />
+
+## Playroom
+
+Playroom is a tool that allows you to play with components in a live environment.
+
 <FancyLink
-  title="Orbit Storybook Playground"
-  href="https://kiwicom.github.io/orbit/"
-  icon="storybook"
+  title="Orbit Playroom"
+  href="https://kiwicom.github.io/orbit/playroom/"
+  icon="playroom"
 />
 
 ## Orbit Themer
