docs(Badge): add accessibility section
closes FEPLT-2251

--- a/docs/src/documentation/03-components/03-information/badge/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/03-information/badge/01-guidelines.mdx
@@ -61,7 +61,7 @@ visual cues can help users understand the idea more quickly.
 Use icons to display more information in a smaller size,
 such as what form of transport is included.
 
-The badge can be only an icon. Just be sure to keep it [accessible](/foundation/accessibility/)
+The badge can be only an icon. Just be sure to keep it [accessible](./accessibility/)
 by giving it a label for people who don't see the icon.
 
 <Guideline type="do" title="Use icons only on left">
