--- a/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
@@ -80,6 +80,46 @@ intl.formatMessage({
 
 Feel free to customize the translations according to your needs, by eventually providing more context to the alert it refers to.
 
+### Required props in Collapse component
+
+The `Collapse` component now requires the props `expandButtonLabel` and `collapseButtonLabel`.
+
+They are used to provide accessible labels to the button that toggles the collapse state.
+
+**Before:**
+
+```jsx
+<Collapse label="Collapse">
+  <Text>Collapse content</Text>
+</Collapse>
+```
+
+**After:**
+
+```jsx
+<Collapse label="Collapse" expandButtonLabel="Expand" collapseButtonLabel="Collapse">
+  <Text>Collapse content</Text>
+</Collapse>
+```
+
+Make sure to provide translated strings for the `expandButtonLabel` and `collapseButtonLabel` props.
+
+To ease the migration, we provide a codemod to help you out, with some default generic translations.
+The codemod will inject `intl.formatMessage` calls with the default translations, in this case:
+
+```jsx
+intl.formatMessage({
+  id: "orbit.collapse_expand",
+  defaultMessage: "Expand",
+});
+intl.formatMessage({
+  id: "orbit.collapse_collapse",
+  defaultMessage: "Collapse",
+});
+```
+
+Feel free to customize the translations according to your needs, by eventually providing more context.
+
 ## Codemod
 
 A codemod is available to help with the migration. It should target the new props that require (translated) strings.
