--- a/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
@@ -44,6 +44,12 @@ It used to accept a React node for translations, but this could lead to some une
 
 This change also allows for the `aria-label` attribute to have the same value as the `title` prop, if `ariaLabel` is not provided.
 
+### Label prop in Collapse component
+
+The `label` prop in the `Collapse` component now only accepts a string.
+
+It used to accept a React node for translations, but this could lead to some unexpected or wrong HTML structure.
+
 ### Required prop in Alert component when is `closable`
 
 The `Alert` component now requires the prop `labelClose` when `closable` is `true`.
@@ -79,6 +85,46 @@ intl.formatMessage({
 ```
 
 Feel free to customize the translations according to your needs, by eventually providing more context to the alert it refers to.
+
+### Required props in Collapse component
+
+The `Collapse` component now requires the props `expandButtonLabel` and `collapseButtonLabel`.
+
+They are used to provide accessible labels to the button that toggles the collapse state.
+
+**Before:**
+
+```jsx
+<Collapse label="Collapse">
+  <Text>Collapse content</Text>
+</Collapse>
+```
+
+**After:**
+
+```jsx
+<Collapse label="Collapse" expandButtonLabel="Expand" collapseButtonLabel="Collapse">
+  <Text>Collapse content</Text>
+</Collapse>
+```
+
+Make sure to provide translated strings for the `expandButtonLabel` and `collapseButtonLabel` props.
+
+To ease the migration, we provide a codemod to help you out, with some default generic translations.
+The codemod will inject `intl.formatMessage` calls with the default translations, in this case:
+
+```jsx
+intl.formatMessage({
+  id: "orbit.collapse_expand",
+  defaultMessage: "Expand",
+});
+intl.formatMessage({
+  id: "orbit.collapse_collapse",
+  defaultMessage: "Collapse",
+});
+```
+
+Feel free to customize the translations according to your needs, by eventually providing more context.
 
 ## Codemod
 
