chore: adapt to new ariaHidden prop in CarrierLogo

--- a/docs/src/snippets/short-nonvisual.mdx
+++ b/docs/src/snippets/short-nonvisual.mdx
@@ -14,8 +14,7 @@
     <p>
       This can mean including the name of the {props.associated} with the {props.visual} so anyone
       who doesn't see the {props.visual} still gets the name. But if the {props.visual} is present
-      next to text with the name, don't include the name with the {props.visual} so it's not
-      repeated.
+      next to some text with its name, make sure to hide the {props.visual} from screen readers.
     </p>
   )}
 </>
