--- a/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
@@ -126,6 +126,48 @@ intl.formatMessage({
 
 Feel free to customize the translations according to your needs, by eventually providing more context.
 
+### Required prop in ButtonMobileStore component
+
+The `ButtonMobileStore` component now requires the prop `alt`.
+
+This prop provides the alt text for the image that is displayed in the `ButtonMobileStore` component.
+
+This allows assistive technologies to announce the button correctly, given that it renders an image.
+
+**Before:**
+
+```jsx
+<ButtonMobileStore type="appStore" />
+<ButtonMobileStore type="googlePlay" />
+```
+
+**After:**
+
+```jsx
+<ButtonMobileStore type="appStore" alt="Download on the App Store" />
+<ButtonMobileStore type="googlePlay" alt="Get it on Google Play" />
+```
+
+Make sure to provide translated strings for the `alt` prop.
+
+To ease the migration, we provide a codemod to help you out, with some default generic translations.
+The codemod will inject `intl.formatMessage` calls with the default translations, in this case:
+
+```jsx
+intl.formatMessage({
+  id: "common.screenreader.google_play_button",
+  defaultMessage: "Get it on Google Play",
+});
+intl.formatMessage({
+  id: "common.screenreader.app_store_button",
+  defaultMessage: "Download on the App Store",
+});
+```
+
+Remember that the component also expects a `lang` prop, which is used to determine the language version of the image.
+
+Feel free to customize the translations according to your needs, by eventually providing more context.
+
 ## Codemod
 
 A codemod is available to help with the migration. It should target the new props that require (translated) strings.
