docs: add icons BC to migration guide

--- a/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v21.mdx
@@ -12,6 +12,19 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
+### Icon changes
+
+Some icon names have been changed to better align with our icon library in Figma.
+
+The following icons have been renamed:
+
+- `KiwicomGuarantee` -> `Guarantee`
+- `KiwicomNoGuarantee` -> `NoGuarantee`
+- `KiwicomCare` -> `CareKiwiCom`
+
+Also notice that there is a new icon: `KiwiComGuarantee`. This icon is used for the new `Kiwi.com Guarantee` badge.
+The name is fairly similar to the old `KiwicomGuarantee` icon (now renamed to `Guarantee`), but they are different icons. Please check with your designer for the correct icon to use.
+
 ### Removal of default Open button in Accordion component
 
 The default `Open` button, which was rendered in the `AccordionSection` component when no `actions` were provided, has been removed.
