--- a/docs/src/documentation/05-development/04-migration-guides/01-v22.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v22.mdx
@@ -12,6 +12,14 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
+### Label prop in SegmentedSwitch component
+
+The `label` prop in the `SegmentedSwitch` component now only accepts a string.
+
+It used to accept a React node for translations, but this could lead to some unexpected or wrong HTML structure.
+
+This change also allows for the `aria-label` attribute of the wrapper `div` to have the same value as the `label` prop.
+
 ### Removal of `helpClosable` prop in ErrorFormTooltip
 
 The `helpClosable` prop in the `ErrorFormTooltip` component has been removed.
