feat: update to node 22
BREAKING CHANGE: version 22 of Node.js is now required for this package.

--- a/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
@@ -12,6 +12,12 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
+### Required node version
+
+Orbit now requires Node.js v22 or higher.
+
+This applies to all Orbit packages, including `orbit-components`, `orbit-design-tokens` and `orbit-tailwind-preset`.
+
 ### Removal of ariaLabel prop in NavigationBar
 
 The `NavigationBar` component now renders a `header` element instead of a `nav` element, and the `ariaLabel` prop has been removed.
