docs: document new navBar elevation level

--- a/docs/src/documentation/02-foundation/06-elevation.mdx
+++ b/docs/src/documentation/02-foundation/06-elevation.mdx
@@ -33,3 +33,4 @@ and have typically larger and more spread shadow.
 | <ElevationLevel level={4} />            | **Level 4** <br />This level is used basically only in connection with the Modal component, which also has a background overlay with opacity. The elevation communicates to users that they should focus on only one element.<br />Usage:<br />[Modal](/components/overlay/modal/)                                                                                  | <InlineToken name="elevationLevel4BoxShadow" />        |
 | <ElevationLevel level="fixed" />        | **Fixed (Level 4)** <br />This level is applied only to elements that are fixed in position at the top while the page is scrolled.<br />Usage:<br />Fixed header in [Modal](/components/overlay/modal/)<br />[NavigationBar](/components/navigation/navigationbar/)                                                                                                 | <InlineToken name="elevationFixedBoxShadow" />         |
 | <ElevationLevel level="fixedReverse" /> | **Fixed reverse (Level 4)** <br />This level is applied only to elements that are fixed in position at the bottom while the page is scrolled.<br />Usage:<br />Fixed footer in [Modal](/components/overlay/modal/)                                                                                                                                                  | <InlineToken name="elevationFixedReverseBoxShadow" />  |
+| <ElevationLevel level="navBar" />       | **Nav Bar** <br />This level is applied on navigation bars.                                                                                                                                                                                                                                                                                                         | <InlineToken name="elevationNavBarBoxShadow" />        |
