docs: update v23 migration guide with token changes

--- a/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
@@ -12,6 +12,18 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
+### Tokens
+
+The following changes are visual breaking changes that don't require any action from users.
+
+#### Colors
+
+Several color tokens have been updated: green, orange, product and ink. These changes affect components using these tokens like buttons, badges, icons, links and form elements.
+
+#### Elevations
+
+A new `navbar` elevation level has been added and box shadow values for all elevation levels (level1 through level4) have been updated. These changes affect components using elevation tokens like cards, modals, navigation bars, dropdowns and tooltips.
+
 ### Required node version
 
 Orbit now requires Node.js v22 or higher.
