docs: update elevation documentation for navBar token

--- a/docs/src/documentation/02-foundation/06-elevation.mdx
+++ b/docs/src/documentation/02-foundation/06-elevation.mdx
@@ -7,7 +7,7 @@ redirect_from:
 
 import ElevationLevel from "../../components/ElevationLevel";
 
-We have six main elevation levels:
+We have seven main elevation levels:
 
 1.  Suppressed
 2.  Flat
@@ -31,6 +31,6 @@ and have typically larger and more spread shadow.
 | <ElevationLevel level={3} />            | **Level 3** <br />This level is used on components that need attention. The shadow raises the component and users can spot that the element has greater importance because it seems to be visually closer to them.<br />Usage:<br />[Drawer](/components/overlay/drawer/)<br />[Popover](/components/overlay/popover/)<br />[Tooltip](/components/overlay/tooltip/) | <InlineToken name="elevationLevel3BoxShadow" />        |
 | <ElevationLevel level="3Reverse" />     | **Level 3 reverse** <br />This level is applied to elements that are like those in Raised but are stuck to the bottom of the page.<br />Usage:<br /> [Popover](/components/overlay/popover/) on mobile<br />[Tooltip](/components/overlay/tooltip/) on mobile                                                                                                       | <InlineToken name="elevationLevel3ReverseBoxShadow" /> |
 | <ElevationLevel level={4} />            | **Level 4** <br />This level is used basically only in connection with the Modal component, which also has a background overlay with opacity. The elevation communicates to users that they should focus on only one element.<br />Usage:<br />[Modal](/components/overlay/modal/)                                                                                  | <InlineToken name="elevationLevel4BoxShadow" />        |
-| <ElevationLevel level="fixed" />        | **Fixed (Level 4)** <br />This level is applied only to elements that are fixed in position at the top while the page is scrolled.<br />Usage:<br />Fixed header in [Modal](/components/overlay/modal/)<br />[NavigationBar](/components/navigation/navigationbar/)                                                                                                 | <InlineToken name="elevationFixedBoxShadow" />         |
+| <ElevationLevel level="fixed" />        | **Fixed (Level 4)** <br />This level is applied only to elements that are fixed in position at the top while the page is scrolled.<br />Usage:<br />Fixed header in [Modal](/components/overlay/modal/)                                                                                                                                                             | <InlineToken name="elevationFixedBoxShadow" />         |
 | <ElevationLevel level="fixedReverse" /> | **Fixed reverse (Level 4)** <br />This level is applied only to elements that are fixed in position at the bottom while the page is scrolled.<br />Usage:<br />Fixed footer in [Modal](/components/overlay/modal/)                                                                                                                                                  | <InlineToken name="elevationFixedReverseBoxShadow" />  |
-| <ElevationLevel level="navBar" />       | **Nav Bar** <br />This level is applied on navigation bars.                                                                                                                                                                                                                                                                                                         | <InlineToken name="elevationNavBarBoxShadow" />        |
+| <ElevationLevel level="navBar" />       | **Nav Bar** <br />This level is applied on navigation bars.<br />Usage:<br />[NavigationBar](/components/navigation/navigationbar/)                                                                                                                                                                                                                                 | <InlineToken name="elevationNavBarBoxShadow" />        |
