docs: add missing component to v23 migration guide

--- a/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
@@ -22,7 +22,7 @@ Several color tokens have been updated: green, orange, product and ink. These ch
 
 #### Elevations
 
-A new `navbar` elevation level has been added and box shadow values for all elevation levels (level1 through level4) have been updated. These changes affect components using elevation tokens like cards, modals, navigation bars, dropdowns and tooltips.
+A new `navbar` elevation level has been added and box shadow values for all elevation levels (level1 through level4) have been updated. These changes affect components using elevation tokens like box, cards, modals, navigation bars, dropdowns and tooltips.
 
 ### Required node version
 
