chore: adapt to the useId removal in OrbitProvider

--- a/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
+++ b/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
@@ -48,7 +48,7 @@ const customTokens = getTokens({
   }
 })
 
-<OrbitProvider useId={React.useId} theme={{orbit: customTokens}}>
+<OrbitProvider theme={{orbit: customTokens}}>
   <App />
 </OrbitProvider>
 ```
