docs: document new isInNav prop in SkipNavigation

--- a/docs/src/documentation/03-components/06-accessibility/skipnavigation/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/06-accessibility/skipnavigation/01-guidelines.mdx
@@ -27,3 +27,7 @@ import SkipRepeatedContentSnippet from "snippets/skip-repeated-content.mdx";
 ## Behavior
 
 <SkipRepeatedContentSnippet />
+
+### Navigation Integration
+
+Set `isInNav` to `true` when placing inside navigation components for appropriate styling.
